[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PSS2FusionDownscaling"
version = "0.1.0"
description = "Sentinel-2 biophysical downscaling using PlanetScope shortwave reflectance (20 m to 3 m)"
readme = "README.md"
authors = [
    { name = "C.Minuesa", email = "cesar.minuesa@irta.cat" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
    "absl-py>=2.1.0",
    "affine>=2.4.0",
    "astunparse>=1.6.3",
    "attrs>=25.3.0",
    "Bottleneck>=1.5.0",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "click>=8.2.1",
    "click-plugins>=1.1.1.2",
    "cligj>=0.7.2",
    "colorama>=0.4.6",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "flatbuffers>=24.3.25",
    "fonttools>=4.59.0",
    "gast>=0.6.0",
    "GDAL>=3.10.3",
    "google-pasta>=0.2.0",
    "grpcio>=1.68.0",
    "h5py>=3.12.1",
    "idna>=3.10",
    "intel-cmplr-lib-ur>=2025.2.1",
    "intel-openmp>=2025.2.1",
    "joblib>=1.5.1",
    "keras>=3.6.0",
    "kiwisolver>=1.4.9",
    "libclang>=18.1.1",
    "llvmlite>=0.44.0",
    "Markdown>=3.7",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=3.0.2",
    "matplotlib>=3.9.2",
    "mdurl>=0.1.2",
    "mkl>=2025.2.0",
    "mkl-service>=2.5.2",
    "ml-dtypes>=0.4.1",
    "namex>=0.0.8",
    "numba>=0.61.2",
    "numexpr>=2.11.0",
    "numpy>=1.26.4",
    "optree>=0.13.1",
    "packaging>=25.0",
    "pandas>=2.2.2",
    "pillow>=11.3.0",
    "ply>=3.11",
    "protobuf>=5.28.3",
    "pyDMS>=1.0",
    "Pygments>=2.18.0",
    "pyparsing>=3.2.3",
    "pyproj>=3.7.2rc1",
    "PyQt5>=5.15.10",
    "PyQt5-Qt5>=5.15.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "setuptools>=75.1.0",
    "sip>=6.10.0",
    "six>=1.17.0",
    "snuggs>=1.4.7",
    "tbb>=2022.2.0",
    "tcmlib>=1.4.0",
    "tensorboard>=2.18.0",
    "tensorboard-data-server>=0.7.2",
    "tensorflow>=2.18.0",
    "tensorflow-io-gcs-filesystem>=0.31.0",
    "termcolor>=2.5.0",
    "threadpoolctl>=3.6.0",
    "tornado>=6.5.2",
    "tzdata>=2025.2",
    "umf>=0.11.0",
    "unicodedata2>=16.0.0",
    "urllib3>=2.2.3",
    "Werkzeug>=3.1.3",
    "wheel>=0.44.0",
    "wrapt>=1.17.0",
    "UAVBiphysicalModelling>=0.1.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
