[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PSS2FusionDownscaling"
version = "0.1.0"
description = "Sentinel-2 biophysical downscaling using PlanetScope shortwave reflectance (20 m to 3 m)"
readme = "README.md"
authors = [
    { name = "C.Minuesa", email = "cesar.minuesa@irta.cat" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8,<3.12"

dependencies = [
  "numpy",
  "pandas",
  "openpyxl",
  "scikit-learn",
  "joblib",
  "rasterio",
  "GDAL",
  "tensorflow>=2.11",
  "keras>=2.11",
  "UAVBiophysicalModelling @ git+https://github.com/UEA-Irta/UAVBiophysicalModelling.git",
  "pyDMS @ git+https://github.com/radosuav/pyDMS.git",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
